Added Home Screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,13 @@
         background-position: 1000px 0;
     }
 }
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+}
